add some api
