# backend/pkg/oc/models.go
@@ -67,22 +67,22 @@ type OcservDefaultConfigs struct {
 }
 
 type OcservUser struct {
-	ID            uint       `json:"-" gorm:"primaryKey;autoIncrement"`
-	UID           string     `json:"uid" gorm:"type:varchar(26);not null;unique"`
-	Group         string     `json:"group" gorm:"type:varchar(16);default:'defaults'"`
-	Username      string     `json:"username" gorm:"type:varchar(16);not null;unique"`
-	Password      string     `json:"password" gorm:"type:varchar(16);not null"`
-	IsLocked      bool       `json:"is_locked" gorm:"default(false)"`
-	CreatedAt     time.Time  `json:"created_at" gorm:"autoCreateTime"`
-	UpdatedAt     time.Time  `json:"updated_at" gorm:"autoUpdateTime"`
-	ExpireAt      *time.Time `json:"expire_at" gorm:"type:date"`
-	DeactivatedAt *time.Time `json:"deactivated_at" gorm:"type:date;default:NULL"`
-	TrafficType   string     `json:"traffic_type" gorm:"type:varchar(32);not null;default:1" enums:"Free,MonthlyTransmit,MonthlyReceive,TotallyTransmit,TotallyReceive"`
-	TrafficSize   int        `json:"traffic_size" gorm:"not null;default:10"` // in GiB  >> x * 1024 ** 3
-	Rx            int        `json:"rx" gorm:"not null;default:0"`            // Receive in bytes
-	Tx            int        `json:"tx" gorm:"not null;default:0"`            // Transmit in bytes
-	Description   string     `json:"description" gorm:"type:text"`
-	IsOnline      bool       `json:"is_online" gorm:"-:migration;->"`
+	ID            uint       `json:"-" gorm:"primaryKey;autoIncrement" `
+	UID           string     `json:"uid" gorm:"type:varchar(26);not null;unique" validate:"required"`
+	Group         string     `json:"group" gorm:"type:varchar(16);default:'defaults'" validate:"required"`
+	Username      string     `json:"username" gorm:"type:varchar(16);not null;unique" validate:"required"`
+	Password      string     `json:"password" gorm:"type:varchar(16);not null" validate:"required"`
+	IsLocked      bool       `json:"is_locked" gorm:"default(false)" validate:"required"`
+	CreatedAt     time.Time  `json:"created_at" gorm:"autoCreateTime" validate:"required"`
+	UpdatedAt     time.Time  `json:"updated_at" gorm:"autoUpdateTime" validate:"omitempty"`
+	ExpireAt      *time.Time `json:"expire_at" gorm:"type:date" validate:"omitempty"`
+	DeactivatedAt *time.Time `json:"deactivated_at" gorm:"type:date;default:NULL" validate:"omitempty"`
+	TrafficType   string     `json:"traffic_type" gorm:"type:varchar(32);not null;default:1" enums:"Free,MonthlyTransmit,MonthlyReceive,TotallyTransmit,TotallyReceive" validate:"required"`
+	TrafficSize   int        `json:"traffic_size" gorm:"not null;default:10" validate:"required"` // in GiB  >> x * 1024 ** 3
+	Rx            int        `json:"rx" gorm:"not null;default:0" validate:"required"`            // Receive in bytes
+	Tx            int        `json:"tx" gorm:"not null;default:0" validate:"required"`            // Transmit in bytes
+	Description   string     `json:"description" gorm:"type:text" validate:"omitempty"`
+	IsOnline      bool       `json:"is_online" gorm:"-:migration;->" validate:"required"`
 }
 
 type OcservUserActivity struct {
@@ -112,6 +112,13 @@ func (o *OcservUser) BeforeSave(tx *gorm.DB) (err error) {
 }
 
 func (o *OcservUser) BeforeCreate(tx *gorm.DB) (err error) {
+	if !validateTrafficType(o.TrafficType) {
+		return fmt.Errorf("invalid TrafficType: %s", o.TrafficType)
+	}
+	if o.TrafficType == Free {
+		o.TrafficSize = 0
+	}
+
 	o.UID = ulid.Make().String()
 	return
 }
